infrastructure/base/apps/apicurio-studio-old/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apicurio-ui
  labels:
    app: apicurio-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apicurio-ui
  template:
    metadata:
      labels:
        app: apicurio-ui
    spec:
      containers:
        - name: apicurio-ui
          image: apicurio/apicurio-studio-ui:0.2.62.Final
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: apicurio-ui
  labels:
    app: apicurio-ui
spec:
  selector:
    app: apicurio-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio-ui
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: "apicurio.hopps.cloud"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apicurio-ui
                port:
                  name: http
  tls:
    - hosts:
        - "apicurio.hopps.cloud"
      secretName: apicurio-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apicurio-api
  labels:
    app: apicurio-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apicurio-api
  template:
    metadata:
      labels:
        app: apicurio-api
    spec:
      containers:
        - name: apicurio-api
          image: apicurio/apicurio-studio-api:0.2.62.Final
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: apicurio-api
  labels:
    app: apicurio-api
spec:
  selector:
    app: apicurio-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: "api.apicurio.hopps.cloud"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apicurio-api
                port:
                  name: http
  tls:
    - hosts:
        - "api.apicurio.hopps.cloud"
      secretName: apicurio-api-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apicurio-websocket
  labels:
    app: apicurio-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apicurio-websocket
  template:
    metadata:
      labels:
        app: apicurio-websocket
    spec:
      containers:
        - name: apicurio-websocket
          image: apicurio/apicurio-studio-ws:0.2.62.Final
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: apicurio-websocket
  labels:
    app: apicurio-websocket
spec:
  selector:
    app: apicurio-websocket
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio-websocket
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: "ws.apicurio.hopps.cloud"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apicurio-websocket
                port:
                  name: http
  tls:
    - hosts:
        - "ws.apicurio.hopps.cloud"
      secretName: apicurio-ws-tls
